--- a/NAMESPACE
+++ b/NAMESPACE
@@ -209,6 +209,7 @@ importFrom(utils,URLencode)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,head)
+importFrom(utils,read.csv)
 importFrom(utils,tail)
 importFrom(whisker,iteratelist)
 importFrom(xml2,as_xml_document)
