add fcn to lookup works in crossref based on ISBN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(classify_swepub)
 export(classify_umu_ub)
 export(cr_funders)
 export(cr_funders_resolve)
+export(cr_isbn_lookup)
 export(cr_publisher)
 export(cr_work_assertions)
 export(cr_work_confinfo)
@@ -76,6 +77,7 @@ import(purrr)
 import(readr)
 import(stringr)
 import(swecris)
+import(tibble)
 import(tidyr)
 import(vinnova)
 importFrom(DBI,dbConnect)
@@ -125,6 +127,7 @@ importFrom(httr,with_config)
 importFrom(httr2,req_cookie_preserve)
 importFrom(httr2,req_perform)
 importFrom(httr2,req_url_query)
+importFrom(httr2,req_user_agent)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,url_build)
@@ -136,6 +139,9 @@ importFrom(jsonlite,toJSON)
 importFrom(libbib,check_isbn_10_check_digit)
 importFrom(libbib,check_isbn_13_check_digit)
 importFrom(libbib,check_issn_check_digit)
+importFrom(libbib,is_valid_isbn_10)
+importFrom(libbib,is_valid_isbn_13)
+importFrom(libbib,normalize_isbn)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
 importFrom(lubridate,parse_date_time)
