by default include early access in scopus search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(classify_umu_ub)
 export(cr_funders)
 export(cr_funders_resolve)
 export(cr_isbn_lookup)
+export(cr_name_parts)
 export(cr_publisher)
 export(cr_work_assertions)
 export(cr_work_confinfo)
